: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/08_String类型遍历字符串.html
+++ b/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/08_String类型遍历字符串.html
@@ -8,12 +8,11 @@
 </head>
 <body>
   <script>
-    var str = ""
-    console.log(str.length) // 0
-    var str2 = " "
-    console.log(str2.length) // 1
     var str3 = "My name is xudaxian"
-    console.log(str3.length) // 19
+    // 使用普通的 for 循环遍历
+    for (let i = 0; i < str3.length; i++) {
+      console.log(str3.charAt(i))
+    }
   </script>
 </body>
 </html>
