--- a/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/09_String类型遍历字符串.html
+++ b/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/09_String类型遍历字符串.html
@@ -7,6 +7,12 @@
   <title>Title</title>
 </head>
 <body>
-
+  <script>
+    var str3 = "My name is xudaxian"
+    // 使用 for ... of 遍历
+    for (let c of str3) {
+      console.log(c)
+    }
+  </script>
 </body>
 </html>
