--- a/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/10_String类型不可变.html
+++ b/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/10_String类型不可变.html
@@ -8,12 +8,9 @@
 </head>
 <body>
   <script>
-    var str = ""
-    console.log(str.length) // 0
-    var str2 = " "
-    console.log(str2.length) // 1
     var str3 = "My name is xudaxian"
-    console.log(str3.length) // 19
+    str3[0] = 'H'
+    console.log(str3) // My name is xudaxian
   </script>
 </body>
 </html>
