--- a/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/11_String类型转变为大小写.html
+++ b/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/11_String类型转变为大小写.html
@@ -8,12 +8,10 @@
 </head>
 <body>
   <script>
-    var str = ""
-    console.log(str.length) // 0
-    var str2 = " "
-    console.log(str2.length) // 1
-    var str3 = "My name is xudaxian"
-    console.log(str3.length) // 19
+    var str = "Hello World"
+    console.log(str) // Hello World
+    console.log(str.toLowerCase()) // hello world
+    console.log(str.toUpperCase()) // HELLO WORLD
   </script>
 </body>
 </html>
