--- a/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/14_String类型判断是否以xxx结尾.html
+++ b/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/14_String类型判断是否以xxx结尾.html
@@ -7,6 +7,10 @@
   <title>Title</title>
 </head>
 <body>
-
+  <script>
+    var str = "Hello World"
+    console.log(str.endsWith("Wor")) // false
+    console.log(str.endsWith("World")) // true
+  </script>
 </body>
 </html>
