--- a/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/15_String类型替换字符串.html
+++ b/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/15_String类型替换字符串.html
@@ -7,6 +7,9 @@
   <title>Title</title>
 </head>
 <body>
-
+  <script>
+    var str = "Hello World"
+    console.log(str.replace("e", "E")) // HEllo World
+  </script>
 </body>
 </html>
