--- a/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/16_String类型截取子串.html
+++ b/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/16_String类型截取子串.html
@@ -8,12 +8,11 @@
 </head>
 <body>
   <script>
-    var str = ""
-    console.log(str.length) // 0
-    var str2 = " "
-    console.log(str2.length) // 1
-    var str3 = "My name is xudaxian"
-    console.log(str3.length) // 19
+    var str = "Hello World"
+    console.log(str.slice(0)) // Hello World
+    console.log(str.slice(2)) // llo World
+    console.log(str.slice(2, 7)) // llo W
+    console.log(str.slice(2, -1)) // llo Worl
   </script>
 </body>
 </html>
