--- a/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/07_String类型的使用.html
+++ b/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/07_String类型的使用.html
@@ -7,6 +7,12 @@
   <title>Title</title>
 </head>
 <body>
-
+  <script>
+    var str3 = "My name is xudaxian"
+    console.log(str3[0]) // M
+    console.log(str3[-1]) // undefined
+    console.log(str3.charAt(0)) // M
+    console.log(str3.charAt(-1)) // ""
+  </script>
 </body>
 </html>
