--- a/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/12_String类型查找子串.html
+++ b/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/12_String类型查找子串.html
@@ -7,6 +7,11 @@
   <title>Title</title>
 </head>
 <body>
-
+  <script>
+    var str = "Hello World"
+    var s = "W"
+    console.log(str.indexOf(s)) // 6
+    console.log(str.includes(s)) // true
+  </script>
 </body>
 </html>
