--- a/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/13_String类型判断是否以xxx开头.html
+++ b/02-JavaScript/01-JavaScript基础/08_JavaScript内置类/13_String类型判断是否以xxx开头.html
@@ -8,12 +8,9 @@
 </head>
 <body>
   <script>
-    var str = ""
-    console.log(str.length) // 0
-    var str2 = " "
-    console.log(str2.length) // 1
-    var str3 = "My name is xudaxian"
-    console.log(str3.length) // 19
+    var str = "Hello World"
+    console.log(str.startsWith("Hel")) // true
+    console.log(str.startsWith("lo")) // false
   </script>
 </body>
 </html>
