--- a/02-JavaScript/01-JavaScript基础/09_JavaScript数组/03_数组的基本操作.html
+++ b/02-JavaScript/01-JavaScript基础/09_JavaScript数组/03_数组的基本操作.html
@@ -10,13 +10,11 @@
   <script>
     /* 数组的声明语法 */
     var arr = ['张三', '李四', '王五', '赵六'];
-    /* 数组的取值语法 */
+    /* 访问数组中的元素 */
     console.log(arr[0]) // 张三
-    console.log(arr[1]) // 李四
-    console.log(arr[2]) // 王五
-    console.log(arr[3]) // 赵六
-    /* 访问数组最后一个元素 */
-    console.log(arr[arr.length - 1]) // 赵六
+    // 修改数组中的元素
+    arr[0] = "田七"
+    console.log(arr[0]) // 田七
   </script>
 </body>
 </html>
