--- a/02-JavaScript/01-JavaScript基础/09_JavaScript数组/10_数组的基本操作.html
+++ b/02-JavaScript/01-JavaScript基础/09_JavaScript数组/10_数组的基本操作.html
@@ -12,7 +12,7 @@
 
     console.log(arr) // ['张三', '李四', '王五']
 
-    arr.splice(1, 1, "田七", "赵六") // 替换元素，即先将索引为 1 位置上的元素删除 1 个，然后再添加 2 个元素
+    arr.splice(1, 1, "田七", "赵六") // 替换元素，即先将索引为 1 位置上的元素向后删除 1 个元素，然后再添加 2 个元素
 
     console.log(arr) // ['张三', '田七', '赵六', '王五']
   </script>
