--- a/02-JavaScript/01-JavaScript基础/09_JavaScript数组/15_数组方法concat的使用.html
+++ b/02-JavaScript/01-JavaScript基础/09_JavaScript数组/15_数组方法concat的使用.html
@@ -8,12 +8,13 @@
 </head>
 <body>
   <script>
-    /* slice 对数组中的元素进行截取之后，返回一个新的数组 */
-    var arr = [1, 2, 3, 4, 5, 6]
-    console.log(arr) // [1, 2, 3, 4, 5, 6]
-    var newArr = arr.slice(1, 2)
-    console.log(arr) // [1, 2, 3, 4, 5, 6]
-    console.log(newArr) // [2]
+    /* concat 将多个数组中的元素提取出来组成一个新的数组，并返回 */
+    var arr = [1, 2, 3]
+    var arr2 = [4, 5, 6]
+    var arr3 = [7, 8, 9]
+
+    var arr4 = arr.concat(arr2, arr3)
+    console.log(arr4) // [1, 2, 3, 4, 5, 6, 7, 8, 9]
   </script>
 </body>
 </html>
