--- a/02-JavaScript/01-JavaScript基础/09_JavaScript数组/19_数组方法find的使用.html
+++ b/02-JavaScript/01-JavaScript基础/09_JavaScript数组/19_数组方法find的使用.html
@@ -15,7 +15,7 @@
       {id: 400, name: "赵六", age: 21},
       {id: 500, name: "田七", age: 22},
     ]
-
+    // 高阶函数
     var result = arr.find(function (item, index, arr) {
       return item.id === 100
     })
