--- a/02-JavaScript/01-JavaScript基础/09_JavaScript数组/22_数组方法every的使用.html
+++ b/02-JavaScript/01-JavaScript基础/09_JavaScript数组/22_数组方法every的使用.html
@@ -17,11 +17,11 @@
     ]
 
     // 过滤出 keyword 含有 [aa,dd] 的数据
-    let keyword = ["cc", "dd"]
+    let filterKeywords = ["cc", "dd"]
 
     var filterArr = arr.filter(function (item) {
       const {keywords} = item
-      return keyword.every(value => keywords.includes(value))
+      return filterKeywords.every(value => keywords.includes(value))
     })
 
     console.log(filterArr)
