--- a/02-JavaScript/01-JavaScript基础/09_JavaScript数组/22_数组方法every的使用.html
+++ b/02-JavaScript/01-JavaScript基础/09_JavaScript数组/22_数组方法every的使用.html
@@ -16,7 +16,7 @@
       {id: 500, name: "田七", age: 22, keywords: ["dd", "cc"]},
     ]
 
-    // 过滤出 keyword 含有 [aa,dd] 的数据
+    // 过滤出 arr 中 keywords 含有 [aa,dd] 的数据
     let filterKeywords = ["cc", "dd"]
 
     var filterArr = arr.filter(function (item) {
