--- a/02-JavaScript/01-JavaScript基础/10_DOM相关的API操作/05_document.html
+++ b/02-JavaScript/01-JavaScript基础/10_DOM相关的API操作/05_document.html
@@ -12,11 +12,13 @@
 
   <script>
     var htmlEl = document.documentElement
-    console.log(htmlEl)
+    console.log(`html: ${htmlEl}`) // html 元素
     var headEl = document.head
-    console.log(headEl)
+    console.log(`head: ${headEl}`) // head 元素
     var bodyEl = document.body
-    console.log(bodyEl)
+    console.log(`body:${bodyEl}`) // body 元素
+    var doctype = document.doctype
+    console.log(`doctype:${doctype}`) // doctype
   </script>
 </body>
 </html>
