--- a/02-JavaScript/01-JavaScript基础/10_DOM相关的API操作/09_节点的Node常见属性.html
+++ b/02-JavaScript/01-JavaScript基础/10_DOM相关的API操作/09_节点的Node常见属性.html
@@ -2,11 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Title</title>
 </head>
 <body>
+  <!-- 我是注释 -->
+  我是文本
+  <div class="box">
+    我是div元素
+  </div>
 
+  <script>
+    var commentNode = document.body.childNodes[1]
+    console.log(commentNode, commentNode.nodeType, commentNode.nodeType === Node.COMMENT_NODE)
+    var textNode = document.body.childNodes[2]
+    console.log(textNode, textNode.nodeType, textNode.nodeType === Node.TEXT_NODE)
+    var boxEl = document.body.childNodes[3]
+    console.log(boxEl, boxEl.nodeType, boxEl.nodeType === Node.ELEMENT_NODE)
+  </script>
 </body>
 </html>
