--- a/02-JavaScript/01-JavaScript基础/10_DOM相关的API操作/12_节点中的hidden属性.html
+++ b/02-JavaScript/01-JavaScript基础/10_DOM相关的API操作/12_节点中的hidden属性.html
@@ -20,8 +20,9 @@
 
   <script>
     var btnEl = document.querySelector(".btn")
+    var boxEl = document.querySelector(".box")
+    // 点击事件
     btnEl.onclick = function () {
-      var boxEl = document.querySelector(".box")
       boxEl.hidden = !boxEl.hidden
     }
   </script>
