--- a/02-JavaScript/01-JavaScript基础/10_DOM相关的API操作/16_JavaScript中的style的使用.html
+++ b/02-JavaScript/01-JavaScript基础/10_DOM相关的API操作/16_JavaScript中的style的使用.html
@@ -41,7 +41,8 @@
       // box.style.height = '200px'
 
       // ② 动态添加 class
-      box.className = 'active'
+      // box.className = 'active'
+      box.classList.toggle("active")
     }
   </script>
 
