--- a/02-JavaScript/01-JavaScript基础/10_DOM相关的API操作/17_JavaScript中的style的使用.html
+++ b/02-JavaScript/01-JavaScript基础/10_DOM相关的API操作/17_JavaScript中的style的使用.html
@@ -16,6 +16,12 @@
       background-color: orange;
     }
 
+    .active {
+      width: 200px;
+      height: 200px;
+      background-color: pink;
+      color: white;
+    }
   </style>
 </head>
 <body>
@@ -28,12 +34,15 @@
     var box = document.querySelector(".box")
 
     btn.onclick = function () {
-      // 直接修改 style ，为什么这样使用，因为 style 是全局属性，所以 JavaScript 可以通过 Property 的形式来直接访问和修改
-      box.style.color = 'white'
-      box.style.backgroundColor = 'pink'
-      box.style.width = '200px'
-      box.style.height = '200px'
+      // ① 直接修改 style
+      // box.style.color = 'white'
+      // box.style.backgroundColor = 'pink'
+      // box.style.width = '200px'
+      // box.style.height = '200px'
 
+      // ② 动态添加 class
+      // box.className = 'active'
+      box.classList.toggle("active")
     }
   </script>
 
