🎨: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/11-DOM相关的API操作/02_元素Element-创建元素.html
+++ b/02-JavaScript/01-JavaScript基础/11-DOM相关的API操作/02_元素Element-创建元素.html
@@ -19,7 +19,9 @@
 </head>
 <body>
 
-  <div class="box"></div>
+  <div class="box">
+    <p>我是p元素</p>
+  </div>
 
   <script>
     /* 推荐使用 DOM 操作的 API 来插入元素 */
