🎨: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/11-DOM相关的API操作/02_元素Element-创建元素.html
+++ b/02-JavaScript/01-JavaScript基础/11-DOM相关的API操作/02_元素Element-创建元素.html
@@ -32,7 +32,7 @@
     h2El.classList.add("title", "active")
     h2El.textContent = "我是h2元素"
 
-    // 将元素插入到 boxEl 中
+    // 将元素插入到 boxEl 中的最后一个位置
     boxEl.append(h2El)
 
   </script>
