: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/11-DOM相关的API操作/03_元素Element-移除元素.html
+++ b/02-JavaScript/01-JavaScript基础/11-DOM相关的API操作/03_元素Element-移除元素.html
@@ -26,6 +26,7 @@
   <button class="btn">按钮</button>
 
   <script>
+    // 获取元素
     var btnEl = document.querySelector(".btn")
     var boxEl = document.querySelector(".box")
 
