🎨: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/11_DOM相关的API操作/04_元素Element-克隆元素.html
+++ b/02-JavaScript/01-JavaScript基础/11_DOM相关的API操作/04_元素Element-克隆元素.html
@@ -21,7 +21,7 @@
   <div class="box">
     <p>我是p元素</p>
   </div>
-  <button class="btn">按钮</button>
+  <button class="btn">复制box元素的按钮</button>
 
   <script>
     // 获取元素
