🎨: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/11_DOM相关的API操作/02_元素Element-创建元素.html
+++ b/02-JavaScript/01-JavaScript基础/11_DOM相关的API操作/02_元素Element-创建元素.html
@@ -24,7 +24,7 @@
   </div>
 
   <script>
-    /* 推荐使用 DOM 操作的 API 来插入元素 */
+    /* 推荐使用原生 DOM API 来插入元素 */
     var boxEl = document.querySelector(".box")
 
     // 创建一个 DOM 元素，在内存中
