--- a/02-JavaScript/01-JavaScript基础/11_DOM相关的API操作/09_元素Element-复制元素.html
+++ b/02-JavaScript/01-JavaScript基础/11_DOM相关的API操作/09_元素Element-复制元素.html
@@ -9,33 +9,31 @@
     .box {
       width: 200px;
       height: 200px;
-      background-color: orange;
-    }
-
-    .box p {
-      color: red;
+      background-color: pink;
     }
   </style>
 </head>
 <body>
+
   <div class="box">
     <p>我是p元素</p>
   </div>
-  <button class="btn">复制box元素的按钮</button>
+  <button class="btn">按钮</button>
 
   <script>
-    // 获取元素
-    var bodyEl = document.body
-    var btnEl = document.querySelector(".btn")
+    // 获取 box 元素
     var boxEl = document.querySelector(".box")
-
-    // 复制元素
+    // 获取按钮元素
+    var btnEl = document.querySelector(".btn")
+    // 获取 body 元素
+    var bodyEl = document.body
+    // 添加点击事件
     btnEl.onclick = function () {
-      // 复制一个元素，如果传入的参数是 true ，就表示深度复制
-      var clone = boxEl.cloneNode()
-      bodyEl.append(clone)
+      // 复制元素
+      var cloneEl = boxEl.cloneNode()
+      // 插入到页面上
+      bodyEl.append(cloneEl)
     }
-
   </script>
 
 </body>
