🎨: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/11_DOM相关的API操作/10_元素Element-复制元素.html
+++ b/02-JavaScript/01-JavaScript基础/11_DOM相关的API操作/10_元素Element-复制元素.html
@@ -5,34 +5,20 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Title</title>
-  <style>
-    .box {
-      width: 200px;
-      height: 200px;
-      background-color: pink;
-    }
-  </style>
 </head>
 <body>
 
-  <div class="box">
-    <p>我是p元素</p>
-  </div>
-  <button class="btn">按钮</button>
+  <div class="counter">0</div>
+  <button class="btn">点击+1</button>
 
   <script>
-    // 获取 box 元素
-    var boxEl = document.querySelector(".box")
-    // 获取按钮元素
+    var counterEl = document.querySelector(".counter")
     var btnEl = document.querySelector(".btn")
-    // 获取 body 元素
-    var bodyEl = document.body
-    // 添加点击事件
+
     btnEl.onclick = function () {
-      // 复制元素（深度复制）
-      var cloneEl = boxEl.cloneNode(true)
-      // 插入到页面上
-      bodyEl.append(cloneEl)
+      var count = Number(counterEl.textContent)
+      ++count;
+      counterEl.textContent = count.toString()
     }
   </script>
 
