🎨: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/11_DOM相关的API操作/10_元素Element-复制元素.html
+++ b/02-JavaScript/01-JavaScript基础/11_DOM相关的API操作/10_元素Element-复制元素.html
@@ -17,7 +17,7 @@
 
     btnEl.onclick = function () {
       var count = Number(counterEl.textContent)
-      ++count;
+      ++count
       counterEl.textContent = count.toString()
     }
   </script>
