🎨: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/11_DOM相关的API操作/01_元素Element-为什么使用原生DOM的API.html
+++ b/02-JavaScript/01-JavaScript基础/11_DOM相关的API操作/01_元素Element-为什么使用原生DOM的API.html
@@ -25,11 +25,11 @@
 
     /*
     在 DOM 操作中插入元素不推荐使用 innerHTML 的原因有以下几点：
-    1. 安全性问题：使用innerHTML插入的内容会被浏览器解析为HTML代码，并执行其中的脚本。如果插入的内容来自用户输入或不受信任的来源，可能会导致XSS攻击等安全问题。
-    2. 性能问题：使用innerHTML会导致浏览器重新解析整个HTML结构，重新构建DOM树，这个过程比较耗时。而使用DOM操作的API，如createElement、appendChild等，可以更精确地控制插入位置和方式，减少不必要的DOM重构，提高性能。
-    3. 代码可维护性问题：使用innerHTML插入大段的HTML代码会使代码结构变得混乱，难以维护。而使用DOM操作的API，可以更好地组织代码，提高可读性和可维护性。
-    4. 丢失事件处理程序：使用innerHTML插入元素时，如果已经为某些元素绑定了事件处理程序，那么这些事件处理程序会丢失，需要重新绑定。而使用DOM操作的API，可以避免这个问题。
-    综上所述，虽然innerHTML在某些情况下使用起来更方便，但在大多数情况下，为了安全性、性能和代码可维护性考虑，推荐使用DOM操作的API来插入元素。
+    1. 安全性问题：使用 innerHTML 插入的内容会被浏览器解析为 HTML 代码，并执行其中的脚本。如果插入的内容来自用户输入或不受信任的来源，可能会导致 XSS 攻击等安全问题。
+    2. 性能问题：使用 innerHTML 会导致浏览器重新解析整个 HTML 结构，重新构建 DOM 树，这个过程比较耗时。而使用原生的 DOM API，如 createElement、append 等，可以更精确地控制插入位置和方式，减少不必要的 DOM 重构，提高性能。
+    3. 代码可维护性问题：使用 innerHTML 插入大段的 HTML 代码会使代码结构变得混乱，难以维护。而使用原生的 DOM API，可以更好地组织代码，提高可读性和可维护性。
+    4. 丢失事件处理程序：使用 innerHTML 插入元素时，如果已经为某些元素绑定了事件处理程序，那么这些事件处理程序会丢失，需要重新绑定。而使用原生的 DOM API ，可以避免这个问题。
+    虽然 innerHTML 在某些情况下使用起来更方便，但在大多数情况下，为了安全性、性能和代码可维护性考虑，推荐使用原生的 DOM API 来操作 DOM 元素等内容。
     */
     var boxEl = document.querySelector(".box")
 
