🎨: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/11_DOM相关的API操作/13_动态创建列表.html
+++ b/02-JavaScript/01-JavaScript基础/11_DOM相关的API操作/13_动态创建列表.html
@@ -14,7 +14,7 @@
     var boxEl = document.querySelector(".box")
     while (true) {
       var inputValue = prompt("请输入数据（N或n，退出）：")
-      if (inputValue === 'N'.toLowerCase()) {
+      if (inputValue.toLowerCase() === 'n') {
         break
       }
       var liEl = document.createElement("li")
