: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/01_处理事件的方案.html
+++ b/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/01_处理事件的方案.html
@@ -22,7 +22,7 @@
       console.log(`按钮2发生了点击`)
     }
 
-    // addEventListener
+    // addEventListener（推荐）
     btn3El.addEventListener('click', function () {
       console.log(`按钮3发生了点击`)
     })
