: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/02_事件冒泡和事件捕获.html
+++ b/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/02_事件冒泡和事件捕获.html
@@ -28,6 +28,17 @@
     <div class="inner"></div>
   </div>
 
-  
+  <script>
+    // 获取元素
+    var boxEl = document.querySelector(".box")
+    var innerEl = document.querySelector(".inner")
+    // 添加事件
+    boxEl.addEventListener("click", function () {
+      console.log("boxEl被点击了")
+    })
+    innerEl.addEventListener("click", function () {
+      console.log("innerEl被点击了")
+    })
+  </script>
 </body>
 </html>
