: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/02_事件冒泡和事件捕获.html
+++ b/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/02_事件冒泡和事件捕获.html
@@ -32,12 +32,16 @@
     // 获取元素
     var boxEl = document.querySelector(".box")
     var innerEl = document.querySelector(".inner")
+    var bodyEl = document.body
     // 添加事件
     boxEl.addEventListener("click", function () {
-      console.log("boxEl被点击了")
+      console.log("box被点击了")
     })
     innerEl.addEventListener("click", function () {
-      console.log("innerEl被点击了")
+      console.log("inner被点击了")
+    })
+    bodyEl.addEventListener("click", function () {
+      console.log("body被点击了")
     })
   </script>
 </body>
