: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/02_事件冒泡和事件捕获.html
+++ b/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/02_事件冒泡和事件捕获.html
@@ -33,16 +33,26 @@
     var boxEl = document.querySelector(".box")
     var innerEl = document.querySelector(".inner")
     var bodyEl = document.body
-    // 添加事件
+    // // 添加事件，默认情况下是事件冒泡
+    // boxEl.addEventListener("click", function () {
+    //   console.log("box被点击了")
+    // })
+    // innerEl.addEventListener("click", function () {
+    //   console.log("inner被点击了")
+    // })
+    // bodyEl.addEventListener("click", function () {
+    //   console.log("body被点击了")
+    // })
+    // 添加事件，可以设置为事件捕获
     boxEl.addEventListener("click", function () {
       console.log("box被点击了")
-    })
+    }, true)
     innerEl.addEventListener("click", function () {
       console.log("inner被点击了")
-    })
+    }, true)
     bodyEl.addEventListener("click", function () {
       console.log("body被点击了")
-    })
+    }, true)
   </script>
 </body>
 </html>
