: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/03_事件对象的详细解析.html
+++ b/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/03_事件对象的详细解析.html
@@ -24,8 +24,8 @@
     var boxEl = document.querySelector(".box")
     var btnEl = document.querySelector(".btn")
     // 添加事件
-    boxEl.addEventListener("click", function () {
-      console.log("box发生了点击~~~")
+    boxEl.addEventListener("click", function (event) {
+      console.log("box发生了点击~~~", event)
     })
     btnEl.addEventListener("click", function () {
       console.log("按钮发生了点击---")
