: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/03_事件对象方法.html
+++ b/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/03_事件对象方法.html
@@ -19,7 +19,7 @@
 
     // 添加事件
     aEl.addEventListener("click", function (event) {
-      // 阻止 a 元素跳转
+      // 阻止 a 元素跳转，阻止事件的默认行为
       event.preventDefault()
     })
 
