: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/05_事件对象方法.html
+++ b/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/05_事件对象方法.html
@@ -25,7 +25,7 @@
     var bodyEl = document.body
     // 添加事件
     boxEl.addEventListener("click", function (event) {
-      // 阻止事件的进一步传递
+      // 阻止事件的进一步传递（传播）
       event.stopPropagation()
     })
     bodyEl.addEventListener("click", function () {
