--- a/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/09_事件委托.html
+++ b/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/09_事件委托.html
@@ -36,7 +36,7 @@
 
   <script>
     var boxEl = document.querySelector(".box")
-
+    // 使用事件委托来优化代码
     boxEl.addEventListener('click', function (event) {
       event.target.classList.toggle("active")
     })
