: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/10_事件委托.html
+++ b/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/10_事件委托.html
@@ -40,7 +40,7 @@
     boxEl.addEventListener('click', function (event) {
       // 查询含有 active 类的 li
       var activeEl = document.querySelector(".active")
-      // 移除 active
+      // 如果存在这种类型的 li 就移除 active
       if (activeEl) {
         activeEl.classList.remove("active")
       }
