: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/10_事件委托.html
+++ b/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/10_事件委托.html
@@ -39,7 +39,7 @@
     // 需求：点击某个 li，其它的 li 移除 active
     boxEl.addEventListener('click', function (event) {
       // 查询含有 active 类的 li
-      var activeEl = document.querySelector(".active")
+      var activeEl = boxEl.querySelector(".active")
       // 如果存在这种类型的 li 就移除 active
       if (activeEl) {
         activeEl.classList.remove("active")
