: 前端开发基础

--- a/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/12_事件委托.html
+++ b/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/12_事件委托.html
@@ -26,10 +26,10 @@
   </div>
 
   <script>
-    var boxEl = document.querySelector(".box")
+    let boxEl = document.querySelector(".box")
 
     boxEl.addEventListener('click', function (event) {
-      var {dataset: {action}, textContent} = event.target
+      const {dataset: {action}, textContent} = event.target
       switch (action) {
         case "new":
           console.log(textContent)
