--- a/02-JavaScript/01-JavaScript基础/13_BOM/02_window对象的使用.html
+++ b/02-JavaScript/01-JavaScript基础/13_BOM/02_window对象的使用.html
@@ -10,6 +10,7 @@
 
   <a href="https://www.baidu.com">百度一下</a>
   <a href="https://www.baidu.com" target="_blank">百度一下</a>
+  <!--  通过 button 来模拟 a 元素  -->
   <button class="btn1">百度一下</button>
   <button class="btn2">百度一下</button>
 
@@ -20,7 +21,7 @@
     var btn2 = document.querySelector(".btn2")
 
     btn1.addEventListener('click', function () {
-      window.open("https://www.baidu.com")
+      window.open("https://www.baidu.com", "_self")
     })
 
     btn2.addEventListener('click', function () {
