--- a/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/10_事件委托.html
+++ b/02-JavaScript/01-JavaScript基础/12_JavaScript的事件处理/10_事件委托.html
@@ -20,7 +20,7 @@
     .active {
       color: red;
       font-size: 20px;
-      background-color: pink;
+      background-color: red;
     }
   </style>
 </head>
