--- a/02-JavaScript/02-JavaScript高级/01_JavaScript中的this指向/08_this的隐式绑定.html
+++ b/02-JavaScript/02-JavaScript高级/01_JavaScript中的this指向/08_this的隐式绑定.html
@@ -7,20 +7,30 @@
   <title>Title</title>
 </head>
 <body>
+  <button class="btn">按钮</button>
   <script>
     /*
       隐式绑定：当`函数`作为`对象`的`方法`调用时，this 指向调用该方法的对象。换言之，它的调用位置是通过某个对象发起的函数调用。
     */
     function foo() {
-      console.log('foo', this) // obj
+      console.log('foo', this) // obj1
     }
 
-    var obj = {
+
+    var obj1 = {
       name: '张三',
       foo: foo
     }
 
-    obj.foo()
+    var obj2 = {
+      name: '李四',
+      obj1: obj1
+    }
+
+    var btn = document.querySelector(".btn")
+    btn.addEventListener('click', function () {
+      obj2.obj1.foo()
+    })
 
   </script>
 </body>
