: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/01_JavaScript中的this指向/09_new绑定.html
+++ b/02-JavaScript/02-JavaScript高级/01_JavaScript中的this指向/09_new绑定.html
@@ -7,6 +7,19 @@
   <title>Title</title>
 </head>
 <body>
+  <script>
+    function Person(name, age) {
+      this.name = name
+      this.age = age
 
+      this.running = function () {
+        console.log(this) // person
+      }
+    }
+
+    var person = new Person("张三", 30)
+    person.running()
+
+  </script>
 </body>
 </html>
