: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/01_JavaScript中的this指向/11_call和apply.html
+++ b/02-JavaScript/02-JavaScript高级/01_JavaScript中的this指向/11_call和apply.html
@@ -16,9 +16,13 @@
     foo("张三", 30)
 
     // call 调用
+    // 第一个参数：绑定 this
+    // 第二个参数：实际参数列表，以,隔开
     foo.call("abc", "李四", 10)
 
     // apply
+    // 第一个参数：绑定 this
+    // 第二个参数：传入的参数，以数组的形式
     foo.apply("abc", ["王五", 50])
   </script>
 </body>
