: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/01_JavaScript中的this指向/27_箭头函数的this使用.html
+++ b/02-JavaScript/02-JavaScript高级/01_JavaScript中的this指向/27_箭头函数的this使用.html
@@ -17,6 +17,20 @@
 
     bar.apply("abc") // window
 
+
+    // this 的查找规则
+    var obj = {
+      name: "张三",
+      foo: function () {
+        console.log(this);
+      }
+    }
+
+    obj.foo() // obj
+
+    var baz = obj.foo
+    baz() // window
+
   </script>
 </body>
 </html>
