: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/03_JavaScript的运行原理/05_全局变量的查找.html
+++ b/02-JavaScript/02-JavaScript高级/03_JavaScript的运行原理/05_全局变量的查找.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <script>
-    console.log(message) // undefined
+    console.log(message)
     var message = "Global Message"
-    console.log(message) // Global Message
+    console.log(message)
   </script>
 </body>
 </html>
