: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/05_JavaScript中函数的增强/01_函数的常用属性.html
+++ b/02-JavaScript/02-JavaScript高级/05_JavaScript中函数的增强/01_函数的常用属性.html
@@ -18,14 +18,14 @@
       return a + b + c
     }
 
-    console.log('函数的参数个数：' + bar.length) // 函数的参数个数：3
+    console.log('函数中形参的个数：' + bar.length) // 函数的参数个数：3
 
     function baz(a, b, ...rest) {
 
       return a + b + Array.from(rest).reduce((c, d) => c + d)
     }
 
-    console.log('函数的参数个数：' + baz.length) // 函数的参数个数：2
+    console.log('函数中形参的个数：' + baz.length) // 函数的参数个数：2
 
   </script>
 </body>
