: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/05_JavaScript中函数的增强/04_函数的arguments.html
+++ b/02-JavaScript/02-JavaScript高级/05_JavaScript中函数的增强/04_函数的arguments.html
@@ -8,14 +8,11 @@
 </head>
 <body>
   <script>
-    var foo = function () {
-      Array.from(arguments).forEach((e) => {
-            console.log(e);
-          }
-      )
+    function foo(a, b, c) {
+      console.log(Array.isArray(arguments)) // false
     }
 
-    foo(1, 2, 3)
+    foo()
   </script>
 </body>
 </html>
