: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/05_JavaScript中函数的增强/14_纯函数_slice方法.html
+++ b/02-JavaScript/02-JavaScript高级/05_JavaScript中函数的增强/14_纯函数_slice方法.html
@@ -8,6 +8,10 @@
 </head>
 <body>
   <script>
+    /*
+    * slice 是一个纯函数，无论你怎么调用，都不会对原函数产生任何影响
+    */
+    
     var arr = [1, 2, 3]
 
     var newArr = arr.slice(1, 2)
