--- a/02-JavaScript/02-JavaScript高级/06_JavaScript中对象的增强/01_对象属性的控制_数据属性描述符.html
+++ b/02-JavaScript/02-JavaScript高级/06_JavaScript中对象的增强/01_对象属性的控制_数据属性描述符.html
@@ -17,10 +17,14 @@
     // 对对象中属性进行精准的限制
     Object.defineProperty(obj, "name", {
       // 告诉 JS 引擎，obj 对象的 name 属性不能被删除
-      configurable: false
+      configurable: false,
+      // 告诉 JS 引擎，obj 对象的 name 属性不能通过 for...in 遍历
+      enumerable: false,
+      // 告诉 JS 引擎，obj 对象的 name 属性不能被修改
+      writable: false,
+      // 告诉 JS 引擎，返回的值
+      value: `${obj.name}，是吗`
     })
-
-    delete obj.name
 
     console.log(obj)
   </script>
