: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/06_JavaScript中对象的增强/02_对象属性的控制_存取属性描述符.html
+++ b/02-JavaScript/02-JavaScript高级/06_JavaScript中对象的增强/02_对象属性的控制_存取属性描述符.html
@@ -26,6 +26,7 @@
         _name = value
         console.log(`set方法被调用了，设置的值是：${value}`)
       },
+      // 获取属性时会执行的函数
       get: function () {
         console.log(`get方法被调用了`)
         return _name
