: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/01_普通对象的原型.html
+++ b/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/01_普通对象的原型.html
@@ -13,6 +13,7 @@
       age: 18
     }
 
+    console.log(obj)
     console.log(`获取对象的原型：${obj.__proto__}`)
     console.log(`获取对象的原型：${Object.getPrototypeOf(obj)}`)
     console.log(`获取对象的原型：${obj.__proto__ === Object.getPrototypeOf(obj)}`)
