: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/04_将方法放到原型上.html
+++ b/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/04_将方法放到原型上.html
@@ -29,6 +29,9 @@
     stu2.running()
     stu2.eating()
 
+    console.log(stu1.running === stu2.running) // false
+    console.log(stu1.eating === stu2.eating) // true
+
   </script>
 </body>
 </html>
