: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/06_创建对象过程中的内存.html
+++ b/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/06_创建对象过程中的内存.html
@@ -16,9 +16,9 @@
     var p = new Person("张三", 18)
     console.log(p)
 
-    Person.prototype.address = "江苏"
-    p1.address = "江苏南京"
-    p1.address = "江苏徐州"
+    Person.prototype.address = "北京"
+    p1.address = "上海"
+    p1.address = "俄罗斯"
     console.log(p1)
 
   </script>
