: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/07_继承的实现.html
+++ b/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/07_继承的实现.html
@@ -38,6 +38,8 @@
     var stu2 = new Student("李四", 28, "女", 80)
 
     stu1.running()
+    stu2.eating()
+    stu2.sleeping()
 
   </script>
 </body>
