: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/07_继承的实现.html
+++ b/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/07_继承的实现.html
@@ -28,6 +28,7 @@
 
 
     function Student(name, age, gender, score) {
+      Person.call(this, name, age, gender)
       this.score = score
     }
 
