--- a/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/07_继承的实现.html
+++ b/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/07_继承的实现.html
@@ -34,11 +34,16 @@
 
     Student.prototype = new Person()
 
+    Student.prototype.studying = function () {
+      console.log(`${this.name}正在学习...`)
+    }
+
 
     var stu1 = new Student("张三", 18, "男", 60)
     var stu2 = new Student("李四", 28, "女", 80)
 
     stu1.running()
+    stu1.studying()
     stu2.eating()
     stu2.sleeping()
 
