: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/07_继承的实现.html
+++ b/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/07_继承的实现.html
@@ -33,6 +33,7 @@
     }
 
     Student.prototype = new Person()
+    Student.prototype.constructor = Student
 
     Student.prototype.studying = function () {
       console.log(`${this.name}正在学习...，考了 ${this.score} 分`)
