--- a/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/00_数组的使用.html
+++ b/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/00_数组的使用.html
@@ -10,7 +10,9 @@
   <script>
     var arr = [1, 2, 3, 4, 5]
 
-    console.log(arr)
+    var newArr = arr.map(x => x * 2)
+        .filter(x => x % 2 === 0);
+    console.log(newArr)
   </script>
 </body>
 </html>
