: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/02_函数对象的原型.html
+++ b/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/02_函数对象的原型.html
@@ -19,7 +19,7 @@
     console.dir(foo.__proto__)
     // 将函数看成是一个函数的时候，具备 prototype 属性，也称为显示原型
     // 用来构造对象的时候，给对象设置隐式原型的
-    console.log(foo.prototype)
+    // console.log(foo.prototype)
   </script>
 </body>
 </html>
