--- a/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/05_显式原型中的属性.html
+++ b/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/05_显式原型中的属性.html
@@ -12,8 +12,10 @@
       console.log('Person函数')
     }
 
+    var p = new Person()
+
     console.log(Person.prototype.constructor === Person) // true
-    console.log(Person.prototype.constructor.name === Person.name) // true
+    console.log(p.__proto__.constructor == Person) // true
   </script>
 </body>
 </html>
