--- a/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/08_梳理.html
+++ b/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/08_梳理.html
@@ -9,27 +9,29 @@
 <body>
   <script>
 
-    function Person(name, age) {
-      this.name = name
-      this.age = age
+    function Person() {
 
-      this.running = function () {
-        console.log(this.name + " is running")
+    }
+
+    // 重写原型对象
+    Person.prototype = {
+      name: "许大仙",
+      age: 18,
+      sex: "男",
+      eating: function () {
+        console.log("吃饭")
+      },
+      sleeping: function () {
+        console.log("睡觉")
       }
     }
 
-    Person.prototype.sleeping = function () {
-      console.log(this.name + " is sleeping")
-    }
+    Object.defineProperty(Person.prototype, "constructor", {
+      enumerable: false,
+      value: Person
+    })
 
-    var p1 = new Person("John", 30)
-    p1.running()
-    p1.sleeping()
-
-
-    var p2 = new Person("Jane", 20)
-    p2.running()
-    p2.sleeping()
+    console.dir(Person)
 
   </script>
 </body>
