: 前端开发基础

--- a/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/12_寄生组合式继承.html
+++ b/02-JavaScript/02-JavaScript高级/07_JavaScript的ES5中实现继承/12_寄生组合式继承.html
@@ -11,6 +11,10 @@
     // 方案④
     function inherit(SubType, SuperType) {
       SubType.prototype = Object.create(SuperType.prototype)
+      Object.defineProperty(SubType, "constructor", {
+        enumerable: false,
+        value: SubType
+      })
     }
   </script>
   <script>
